# huntrix

./: LICENSE  README.md  docker-compose.yml  genai_load.py  prometheus.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  telemetry.py
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/dashboards/json/: huntrix-practice.json
grafana/provisioning/datasources/: datasources.yml
